# cryptor

./: .gitignore  Cargo.toml
.github/workflows/: ci.yml  release.yml
src/: main.rs
