[package]
name = "cryptor"
version = "0.1.0"
authors = ["Jeremy Massel <jeremy.massel@automattic.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1

[dependencies]
log = "0.4.0"
simplelog = "^0.7.6"
sodiumoxide = "0.2.6"
structopt = { version = "0.3", default-features = false }
structopt-flags = "0.3"
